...
                        <viewLayoutGuide key="safeArea" id="Ci1-6y-JrA"/>
                    </view>
                    <navigationItem key="navigationItem" title="Project List" id="vx7-XD-euz">
                        <barButtonItem key="backBarButtonItem" title=" " id="2FL-lt-4Nh"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="lli-lV-356">
...
                        <viewLayoutGuide key="safeArea" id="h4A-1U-5RO"/>
                    </view>
                    <navigationItem key="navigationItem" title="Employee List" id="2qB-tt-0RQ">
                        <barButtonItem key="backBarButtonItem" title=" " id="LpG-HP-I3U"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Jga-Jg-GDD">
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter your Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EW8-Gr-Aqy">
                                                        <rect key="frame" x="0.0" y="45" width="394" height="40"/>
                                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter your Band" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5SG-bi-WCr">
                                                        <rect key="frame" x="0.0" y="45" width="394" height="40"/>
                                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter your Designation" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LPG-Ur-yzD">
                                                        <rect key="frame" x="0.0" y="45" width="394" height="40"/>
                                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aaD-2u-PaL" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="ProjectList" image="circle.grid.hex" catalog="system" id="UF0-bj-Wdo"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kTQ-73-EW5">
...
