...
        self.setGradientBackground(gradientLayer:gradientLayer)
        projectListViewModel.getProjectList()
        projectListTableView.accessibilityIdentifier = EEConstants.currentProjectTableView
    }
    
    @IBAction func addNewProjectAction(_ sender: Any) {
        let ac = UIAlertController(title: "Enter new Project", message: nil, preferredStyle: .alert)
        ac.addTextField()
        let submitAction = UIAlertAction(title: "Submit", style: .default) { [unowned ac] _ in
            let projectName = ac.textFields![0]
            if projectName.text != "" {
                let projectListModel = ProjectListModel()
                projectListModel.projectName = projectName.text!
                DatabaseManager.sharedInstance.addProject(object: projectListModel)
                self.projectListViewModel.getProjectList()
...
