//
//  EEConstants.swift
//  EmployeeInventoryDemoApp
//
//  Created by Sachin Randive on 20/05/20.
//  Copyright © 2020 Sachin Randive. All rights reserved.
//

import Foundation

struct EEConstants {
    static let EmployeeListcellIdentifier = "listTableCell"
    static let projectListCellIdentifier = "projectListCellIdentifier"
    static let errorMessage = "All Fields are compulsory"
    static let tableEmployeeTableView = "table--employeeTableView"
    static let currentProjectTableView = "table--currentProjectTableView"
    static let success = "success"
    static let sucessMessage = "Data Added Successfully!!!"
}
